testsuite/poke.pkl/add-f32-diag-2.pk
/* { dg-do compile } */

var res
  = 1 .+ 11L; /* { dg-error "mismatch between the width of LHS and RHS.*" } */
